# SyscallGuard

./: .gitattributes  .gitignore  README.md
batches/: syscall-check-history.yaml
batches/000-regression-baseline/: manifest.yaml
batches/001-syscall-batch-ioctl-renameat2/: manifest.yaml
constraints/: dynamic-test-constraints.yaml  incremental-constraints.yaml  process-constraints.yaml  spec-constraints.yaml  starry-execution-constraints.yaml  starry-fix-constraints.yaml
docs/: batch-process.md  collaboration-model.md  data-model.md  human-review.md  overview.md  repository-boundaries.md  tooling-roadmap.md
runs/check-20260714t165007z-a8e51b0d/: report.md
runs/check-20260715t051552z-22c78d25/: report.md
runs/check-20260715t065305z-3b1566ec/: report.md
runs/check-20260715t080422z-88f1eb5e/: report.md
runs/check-20260715t094535z-97d2cf93/: report.md
runs/check-20260715t104203z-7854877c/: report.md
runs/check-20260716t031844z-4ae8ccb5/: report.md
runs/check-20260716t034600z-819e26b8/: report.md
runs/check-20260716t043110z-9c7529b6/: report.md
runs/check-20260716t052607z-5bf44fc0/: report.md
runs/check-20260716t105412z-45ac09bc/: report.md
runs/check-20260716t121157z-10d9773a/: report.md
runs/check-20260716t122612z-272bbd3a/: report.md
runs/check-20260716t124421z-214097eb/: report.md
runs/check-20260723t030225z-60f534a3/: report.md
runs/check-20260723t031024z-f246e61e/: report.md
runs/check-20260723t034836z-32b53991/: report.md
runs/check-20260723t035731z-8daaf7b5/: report.md
runs/check-migrated-batch-001/: changeset.yaml  manifest.yaml  report.md  results.yaml
runs/fix-20260715t085624z-bc8c6ec3/: changeset.yaml  manifest.yaml  report.md
runs/fix-20260715t085842z-208a34ce/: changeset.yaml  manifest.yaml  regression-results.yaml  report.md
runs/fix-20260715t094617z-c9fd8c17/: changeset.yaml  implementation.patch  manifest.yaml  regression-results.yaml  report.md
runs/fix-20260715t104608z-01d0c47b/: changeset.yaml  implementation.patch  manifest.yaml  regression-results.yaml  report.md
runs/fix-20260716t031910z-c6bb8d2f/: changeset.yaml  implementation.patch  manifest.yaml  regression-results.yaml  report.md
runs/fix-20260716t034649z-df5b0f3b/: changeset.yaml  implementation.patch  manifest.yaml  regression-results.yaml  report.md
runs/fix-20260716t052635z-8ffea129/: changeset.yaml  manifest.yaml  report.md
schemas/: batch-manifest.schema.yaml  check-report.schema.yaml  coverage-matrix.schema.yaml  entities.schema.yaml  ltp-recognition-rules.schema.yaml  review-record.schema.yaml  run.schema.yaml  source-descriptor.schema.yaml  source-index.schema.yaml  starry-target-descriptor.schema.yaml  step-status.schema.yaml
snapshots/ltp/: README.md  (+1 more)
snapshots/ltp/test-sources/bugfix-bug-open-pathmax-no-enametoolong/: CMakeLists.txt
snapshots/ltp/test-sources/bugfix-bug-open-pathmax-no-enametoolong/src/: main.c
snapshots/ltp/test-sources/c-regression-test-mremap/: CMakeLists.txt
snapshots/ltp/test-sources/c-regression-test-mremap/src/: main.c
snapshots/ltp/test-sources/syscall-test-eventfd2/: CMakeLists.txt
snapshots/ltp/test-sources/syscall-test-eventfd2/src/: main.c  test_framework.h
snapshots/ltp/test-sources/syscall-test-ltp-pilot-min/: CMakeLists.txt
snapshots/ltp/test-sources/syscall-test-ltp-pilot-min/src/: main.c
snapshots/ltp/test-sources/syscall-test-madvise/: CMakeLists.txt
snapshots/ltp/test-sources/syscall-test-madvise/src/: main.c
snapshots/ltp/test-sources/syscall-test-mmap-family/: CMakeLists.txt
snapshots/ltp/test-sources/syscall-test-mmap-family/src/: main.c
snapshots/ltp/test-sources/syscall-test-open-family/: CMakeLists.txt
snapshots/ltp/test-sources/syscall-test-open-family/src/: helpers.c  helpers.h  main.c  open_access.c  open_access.h  open_append.c  open_append.h  open_cloexec.c  open_creat_alias.c  open_creat_alias.h  open_create.c  open_dev_null_zero.c  open_directory.c  open_directory.h  open_err_efault.c  open_err_eintr.c  open_err_einval.c  open_err_eloop.c  open_err_enametoolong.c  open_err_enxio.c  open_err_etxtbsy.c  open_err_misc.c  open_excl.c  open_fd_semantics.c  open_flag_matrix.c  open_mode_umask.c  open_nofollow.c  open_nonblock.c  open_path.c  open_pread_pwrite.c  open_silent_flags.c  open_stress.c  open_trunc.c  openat_creat.c  openat_dirfd.c  openat_err.c  openat_flag_matrix.c  test_framework.h
snapshots/ltp/test-sources/syscall-test-pipe-syscalls/: CMakeLists.txt
snapshots/ltp/test-sources/syscall-test-pipe-syscalls/src/: main.c
sources/: index.yaml  ltp-local.yaml  man-pages-local.yaml
syscallguard/: __init__.py  checking.py  common.py  fixing.py  ingest.py  ltp_audit.py  man_static.py  mapping.py  reset.py  static_closure.py
templates/: fix-validation-report.md  gap-report.md  manifest.yaml  review-signoff.yaml  step-report.md
tests/: test_incremental_flow.py  test_ltp_extraction.py  test_man_pages.py  test_man_static.py  test_static_closure.py
tools/: audit_ltp.py  map_man_static_checks.py  report_static_closure.py  validate_repository.py
(+499 files in other folders)
