cmake_minimum_required(VERSION 3.20)
project(bug-open-pathmax-no-enametoolong C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
add_executable(bug-open-pathmax-no-enametoolong src/main.c)
target_compile_options(bug-open-pathmax-no-enametoolong PRIVATE -Wall -Wextra -Werror)
install(TARGETS bug-open-pathmax-no-enametoolong RUNTIME DESTINATION usr/bin/starry-test-suit)
