cmake_minimum_required(VERSION 3.20)
project(test-mremap C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
add_executable(test-mremap src/main.c)
target_include_directories(test-mremap PRIVATE src)
target_compile_options(test-mremap PRIVATE -Wall -Wextra -Werror)
install(TARGETS test-mremap RUNTIME DESTINATION usr/bin/starry-test-suit)
