cmake_minimum_required(VERSION 3.20)
project(test-madvise C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
add_executable(test-madvise src/main.c)
target_include_directories(test-madvise PRIVATE src)
target_compile_options(test-madvise PRIVATE -Wall -Wextra -Werror)
install(TARGETS test-madvise RUNTIME DESTINATION usr/bin/starry-test-suit)
