cmake_minimum_required(VERSION 3.20)
project(test-mmap-family C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
add_executable(test-mmap-family src/main.c)
target_include_directories(test-mmap-family PRIVATE src)
target_compile_options(test-mmap-family PRIVATE -Wall -Wextra -Werror)
install(TARGETS test-mmap-family RUNTIME DESTINATION usr/bin/starry-test-suit)
