cmake_minimum_required(VERSION 3.20)
project(test-pipe-syscalls C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
add_executable(test-pipe-syscalls src/main.c)
target_include_directories(test-pipe-syscalls PRIVATE src)
target_compile_options(test-pipe-syscalls PRIVATE -Wall -Wextra -Werror)
install(TARGETS test-pipe-syscalls RUNTIME DESTINATION usr/bin/starry-test-suit)
